making tests pass